--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ buildscript {
 plugins {
     alias(libs.plugins.com.diffplug.spotless) apply(false)
     alias(libs.plugins.com.android.application) apply(false)
+    id 'com.android.library' version '7.3.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
 
 subprojects {
@@ -36,6 +38,6 @@ subprojects {
 
             ktlint(libs.versions.ktlint.get())
             licenseHeaderFile rootProject.file("../spotless/copyright.kt")
-        } 
+        }
     }
 }
