--- a/Wearable/build.gradle
+++ b/Wearable/build.gradle
@@ -52,7 +52,8 @@ android {
 
   kotlinOptions {
     jvmTarget = "1.8"
-    freeCompilerArgs += "-opt-in=kotlin.RequiresOptIn"
+
+    freeCompilerArgs = ["-opt-in=kotlin.RequiresOptIn", "-Xcontext-receivers"]
   }
 
   buildFeatures {
