--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -76,9 +76,9 @@ dependencies {
   implementation libs.androidx.lifecycle.runtime.ktx
   implementation libs.playservices.wearable
 
-  def nav_version = "2.5.2"
+  def nav_version = "2.5.3"
   implementation("androidx.navigation:navigation-compose:$nav_version")
   implementation "com.google.accompanist:accompanist-pager:0.22.0-rc"
 
-  wearApp projects.wearable
+  wearApp projects.wear
 }
